@@ -90,6 +90,10 @@
 /* an N in the lower half can only happen when digit boundary detection fails *//* define D_LOW_N (VERT_LEFT_DOWN | VERT_RIGHT_DOWN | HORIZ_MID) */
 #define D_Y (ALL_SEGS & ~(HORIZ_UP | VERT_LEFT_DOWN))
 #define D_J (HORIZ_DOWN | VERT_RIGHT_UP | VERT_RIGHT_DOWN)
+/* add two "wrong" 7 definitions used in a character set for a Chinese
+ * table tennis robot */
+#define D_TT_WRONG_SEVEN_1 (D_SEVEN | VERT_LEFT_DOWN | HORIZ_DOWN)
+#define D_TT_WRONG_SEVEN_2 (D_SEVEN | HORIZ_DOWN)
 #define D_UNKNOWN 0
 
 #define NUMBER_OF_DIGITS 6 /* in this special case */
@@ -179,7 +183,8 @@ typedef enum charset_e {
   CS_FULL,
   CS_DIGITS,
   CS_DECIMAL,
-  CS_HEXADECIMAL
+  CS_HEXADECIMAL,
+  CS_TT_ROBOT
 } charset_t;
 
 #define DEFAULT_CHARSET CS_FULL
